finished till footer

--- a/day-1-flexbox/4-flexbox-exercises/4b-mission/begin/index.html
+++ b/day-1-flexbox/4-flexbox-exercises/4b-mission/begin/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <section class="mission">
+        <h2>Our Mission</h2>
+        <div class="text">
+            <img src="/day-1-flexbox/4-flexbox-exercises/4b-mission/logo.png" alt="">
+            <p>
+                edita eius eum quisquam rem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur ullam, exercitationem necessitatibus eum voluptatibus omnis vel quo distinctio quibusdam perspiciatis et facere itaque ex dolores cumque esse vero tempore.
+                Earum.
+            </p>
+        </div>
+    </section>
     <section id="collections">
         <h2>Collections</h2>
         <ul>
