--- a/day-1-flexbox/4-flexbox-exercises/4c-footer/begin/index.html
+++ b/day-1-flexbox/4-flexbox-exercises/4c-footer/begin/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Collections</title>
+    <script src="https://kit.fontawesome.com/1678d1e6d2.js" crossorigin="anonymous"></script>
+
     <link href="css/style.css" rel="stylesheet" />
 </head>
 
@@ -65,10 +67,11 @@
             <h4>Stay Connected!</h4>
             <ul>
                 <li>
-                    <a href="https://www.facebook.com" target="_blank"><img src="img/facebook-icon.svg" alt="Visit us at Facebook." /></a>
+                    <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+
                 </li>
                 <li>
-                    <a href="https://www.instagram.com" target="_blank"><img src="img/instagram-icon.svg" alt="Visit us on Instagram." /></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                 </li>
             </ul>
         </div>
