done with navbar and footer

--- a/day-1-flexbox/5-header-navbar/begin/index.html
+++ b/day-1-flexbox/5-header-navbar/begin/index.html
@@ -10,6 +10,32 @@
 </head>
 
 <body>
+    <div class="header">
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <img src="/day-1-flexbox/5-header-navbar/header-logo.svg" alt="click to reload">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">collections</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#">Donate</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+
     <section id="mission">
         <h2>Our Mission</h2>
         <div class="missiontext">
